Clarify GPR/CPR ports

--- a/docs/crypto-ise.specification.tex
+++ b/docs/crypto-ise.specification.tex
@@ -917,7 +917,7 @@ how the ISE load and store instructions compute their addresses.
 \note{
     The scatter instruction requires three register file reads.
     Because the reads are split across the $\GPR$ and $\CPR$ registers,
-    no {\em extra} ports are needed on either register file beyond the
+    no {\em extra} ports are needed on the RISC-V register file beyond the
     standard two-read-one-write set.
 }
 
