--- a/docs/crypto-ise.changelog.tex
+++ b/docs/crypto-ise.changelog.tex
@@ -8,6 +8,7 @@
 \item Move to automatically generated instruction encoding tables.
 \item Remove support for pack widths of 1.
 \item Add support for twiddling 2-bit values (crumbs) within bytes.
+\item Revise all notation for consistency \& correctness.
 \end{itemize}
 
 \paragraph{Draft-3}
